// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyContent test render test hidden 1`] = `""`;

exports[`VerifyContent test render test render null with denied states 1`] = `""`;

exports[`VerifyContent test render test render null with denied states 2`] = `""`;

exports[`VerifyContent test render test render null with denied states 3`] = `""`;

exports[`VerifyContent test render test render null with denied states 4`] = `""`;

exports[`VerifyContent test render test render null with denied states 5`] = `""`;

exports[`VerifyContent test render test render null with denied states 6`] = `""`;

exports[`VerifyContent test render test render null with denied states 7`] = `""`;

exports[`VerifyContent test render test render null with denied states 8`] = `""`;

exports[`VerifyContent test render test render submitView if verifyAttr is set 1`] = `
<FormSection
  theme="theme"
>
  <SectionHeader
    theme="theme"
  >
    Account recovery requires verified contact information
  </SectionHeader>
  <SectionBody
    theme="theme"
  >
    <div>
      <Input
        autoComplete="off"
        key="code"
        name="code"
        onChange={[Function]}
        placeholder="Code"
        theme="theme"
      />
    </div>
  </SectionBody>
  <SectionFooter
    theme="theme"
  >
    <SectionFooterPrimaryContent
      theme="theme"
    >
      <Button
        onClick={[Function]}
        theme="theme"
      >
        Submit
      </Button>
    </SectionFooterPrimaryContent>
    <SectionFooterSecondaryContent
      theme="theme"
    >
      <Link
        onClick={[Function]}
        theme="theme"
      >
        Skip
      </Link>
    </SectionFooterSecondaryContent>
  </SectionFooter>
</FormSection>
`;

exports[`VerifyContent test render test render verifyView with empty authData 1`] = `
<FormSection
  theme="theme"
>
  <SectionHeader
    theme="theme"
  >
    Account recovery requires verified contact information
  </SectionHeader>
  <SectionBody
    theme="theme"
  />
  <SectionFooter
    theme="theme"
  >
    <SectionFooterPrimaryContent
      theme="theme"
    >
      <Button
        onClick={[Function]}
        theme="theme"
      >
        Verify
      </Button>
    </SectionFooterPrimaryContent>
    <SectionFooterSecondaryContent
      theme="theme"
    >
      <Link
        onClick={[Function]}
        theme="theme"
      >
        Skip
      </Link>
    </SectionFooterSecondaryContent>
  </SectionFooter>
</FormSection>
`;

exports[`VerifyContent test render test render verifyView without phone_number and email 1`] = `
<FormSection
  theme="theme"
>
  <SectionHeader
    theme="theme"
  >
    Account recovery requires verified contact information
  </SectionHeader>
  <SectionBody
    theme="theme"
  >
    <div />
  </SectionBody>
  <SectionFooter
    theme="theme"
  >
    <SectionFooterPrimaryContent
      theme="theme"
    >
      <Button
        onClick={[Function]}
        theme="theme"
      >
        Verify
      </Button>
    </SectionFooterPrimaryContent>
    <SectionFooterSecondaryContent
      theme="theme"
    >
      <Link
        onClick={[Function]}
        theme="theme"
      >
        Skip
      </Link>
    </SectionFooterSecondaryContent>
  </SectionFooter>
</FormSection>
`;

exports[`VerifyContent test render test render with accepted states 1`] = `
<FormSection
  theme="theme"
>
  <SectionHeader
    theme="theme"
  >
    Account recovery requires verified contact information
  </SectionHeader>
  <SectionBody
    theme="theme"
  >
    <div>
      <RadioRow
        key="email"
        name="contact"
        onChange={[Function]}
        placeholder="Email"
        theme="theme"
        value="email"
      />
      <RadioRow
        key="phone_number"
        name="contact"
        onChange={[Function]}
        placeholder="Phone Number"
        theme="theme"
        value="phone_number"
      />
    </div>
  </SectionBody>
  <SectionFooter
    theme="theme"
  >
    <SectionFooterPrimaryContent
      theme="theme"
    >
      <Button
        onClick={[Function]}
        theme="theme"
      >
        Verify
      </Button>
    </SectionFooterPrimaryContent>
    <SectionFooterSecondaryContent
      theme="theme"
    >
      <Link
        onClick={[Function]}
        theme="theme"
      >
        Skip
      </Link>
    </SectionFooterSecondaryContent>
  </SectionFooter>
</FormSection>
`;
